feat: adding the appropiate handler exceptions for the service and controllers